Fixed alignment bug

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,3 @@
     width: 100%;
     overflow: hidden;
 }
-
-body {
-
-}
